--- a/css/utc.css
+++ b/css/utc.css
@@ -195,8 +195,6 @@ a.sourceLine {
     text-decoration: inherit;
 }
 
-.sourceCode { overflow: visible; }
-
 pre {
     overflow-x: auto;
     word-wrap: anywhere;
